syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.admin;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

enum ResponseCode {
  OK = 0;
}

message ActivateRequest {}

message ActivateResponse {
  ResponseCode code = 1;
}

message DeactivateRequest {}

message DeactivateResponse {
  ResponseCode code = 1;
}

message GossipRequest {}

message GossipResponse {
  ResponseCode code = 1;
}

message getLedgerStateRequest {}

message getLedgerStateResponse {
  LedgerState ledgerState = 1;
  ResponseCode code = 2;
}

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc gossip(GossipRequest) returns (GossipResponse);
  rpc getLedgerState(getLedgerStateRequest) returns (getLedgerStateResponse);
}
