syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

enum ResponseCode {
  OK = 0;
}

message PropagateStateRequest {
  LedgerState state = 1;
  repeated int32 replicaTS = 2;
}

message PropagateStateResponse {}

message GetFullStateRequest {}

message GetFullStateResponse {
  LedgerState state = 1;
  repeated int32 replicaTS = 2;
}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc getFullState(GetFullStateRequest) returns (GetFullStateResponse);
}
